hphp/hack/test/typecheck/let/let_for.php.exp
File "let_for.php", line 7, characters 8-12:
Unbound name: twice (a global constant) (Naming[2049])
